--- a/app/src/main/res/layout/grid_list_item.xml
+++ b/app/src/main/res/layout/grid_list_item.xml
@@ -38,7 +38,7 @@
                The width should match the with of the card
                The scaleType should be set to centerCrop-->
         <ImageView
-            android:id="@+id/gdogimage"
+            android:id="@+id/dogsimage"
             android:layout_width="match_parent"
             android:layout_height="194dp"
             android:scaleType="centerCrop"
@@ -51,34 +51,34 @@
                 The dog's hobbies-->
 
         <TextView
-            android:id="@+id/gdogsname"
+            android:id="@+id/dogsname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/gdogimage"
-            app:layout_constraintStart_toStartOf="@id/gdogsname" />
+            app:layout_constraintTop_toBottomOf="@+id/dogsimage"
+            app:layout_constraintStart_toStartOf="@id/dogsimage" />
 
         <TextView
-            android:id="@+id/gdogsage"
+            android:id="@+id/dogsage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/gdogsname"
-            app:layout_constraintStart_toStartOf="@id/gdogsname" />
+            app:layout_constraintTop_toBottomOf="@+id/dogsname"
+            app:layout_constraintStart_toStartOf="@id/dogsname" />
 
         <TextView
-            android:id="@+id/gdogshobbies"
+            android:id="@+id/dogshobbies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/gdogsage"
-            app:layout_constraintEnd_toEndOf="@id/gdogimage" />
+            app:layout_constraintTop_toBottomOf="@+id/dogsage"
+            app:layout_constraintEnd_toEndOf="@id/dogsimage" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
